<resources>
    <string name="app_name">MacroGamia</string>
    
    <string name="facebook_app_id">136344220247700</string>
    <string name="fb_login_protocol_scheme">fb136344220247700</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>

    <string name="navigation_stores">Magasins</string>
    <string name="navigation_communicate">Communiquer</string>
    <string name="navigation_share">Partager</string>
    <string name="navigation_send">Envoyer</string>

    <string name="categories">Sélectionnez une catégorie : </string>
    <string name="events">Sélectionnez un évènement : </string>
    
    
    <string name="buy_product_online">Acheter le produit en ligne</string>
    <string name="payment">Payer</string>
    
    
    <string name="view_stores_having_product">Voir les magasins ayant ce produit en stock</string>
    <string name="store_to_product_button">Voir les produits en stock</string>
    <string name="view_store_on_map">Voir le magasin sur la carte</string>

    
    <string name="connect_to_google">Se connecter au compte Google</string>
    <string name="connect_to_firebase">Se connecter</string>
    <string name="register_to_firebase">S\'enregistrer</string>
    <string name="connection_failed">La connexion a échouée, le mot de passe et/ou l\'adresse e-mail est invalide</string>
    <string name="connected_as">Connecté en tant que : </string>
    <string name="account_address">Votre adresse : </string>
    <string name="account_email">Votre courriel : </string>
    <string name="modify_user_email">Modifer le courriel</string>
    <string name="sponsorship">Le parrainage vous permet de gagner des points de fidélité.
        Les points de fidélité servent à avoir des promotions sur notre sélection de produits. Si vous achetez en magasin, il faut présenter une carte de fidélité</string>
    <string name="fidelity_points">Vos points de fidélité actuels</string>
    <string name="sponsorship_button">Parrainer quelqu\'un</string>
    <string name="modify_password">Réinitialiser le mot de passe</string>
    <string name="modify_address">Modifier votre adresse</string>
    <string name="modify_email">Modifier votre courriel</string>
    <string name="password_forgotten">Mot de passe oublié</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="address_missing">Pensez à modifier votre addresse pour pouvoir passer commande</string>


    <string name="firstname_hint">Nom</string>
    <string name="name_hint">Prénom</string>
    <string name="address_hint">Adresse postale</string>
    <string name="email_hint">Courriel</string>
    <string name="password_hint">Mot de passe</string>


    <string name="store_address">Adresse du magasin : </string>

    <string name="share_button_title">Partager</string>

    <string name="invite_title">Parrainage</string>
    <string name="invite_message">Rejoint moi sur l\'application MacroGamia en écrivant le code
    suivant lors de ton inscription : </string>
    <string name="invite_image">http://imgur.com/TEywFKe</string>


    <string name="priceC">Trier par prix croissant</string>
    <string name="priceD">Trier par prix décroissant</string>
    <string name="nameC">Trier par nom croissant</string>
    <string name="nameD">Trier par nom décroissant</string>
    <string name="cityC">Trier par nom de ville croissant</string>
    <string name="cityD">Trier par nom de ville décroissant</string>
    <string name="defaultSort">Trier par ...</string>


    






    <string-array name="sorting_product">

        <item>@string/defaultSort</item>
        <item>@string/priceC</item>
        <item>@string/priceD</item>
        <item>@string/nameC</item>
        <item>@string/nameD</item>


    </string-array>

    <string-array name="sorting_store">

        <item>@string/defaultSort</item>
        <item>@string/nameC</item>
        <item>@string/nameD</item>
        <item>@string/cityC</item>
        <item>@string/cityD</item>

    </string-array>




    
</resources>
