<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_promoted"
            android:title="Produits phares"/>
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_stores" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Produits" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Promotions" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_manage"
            android:title="Mon compte" />

    </group>

    <item android:title="@string/navigation_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_send" />
        </menu>
    </item>

</menu>
