<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/view_divider_color" />

        <TextView
            android:text="@string/connected_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/account_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"/>

        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/view_divider_color" />





        <TextView
            android:text="@string/account_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"/>

        <TextView
            android:id="@+id/account_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



        <Button
            android:id="@+id/modify_address"
            android:text="@string/modify_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"/>







        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/view_divider_color" />



        <TextView
            android:text="@string/account_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"/>

        <TextView
            android:id="@+id/account_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />






        <Button
            android:id="@+id/modify_email"
            android:text="@string/modify_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/view_divider_color" />

        <TextView
            android:text="@string/sponsorship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/fidelity_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fidelity_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sponsorship_button"
            android:text="@string/sponsorship_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/view_divider_color" />

        <Button
            android:id="@+id/modify_password"
            android:text="@string/modify_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>





</ScrollView>