<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        android:layout_gravity="top|center_horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_user_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:hint="@string/firstname_hint"
                android:layout_gravity="center_horizontal"
                android:paddingTop="0dp"
                android:textColorHint="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name_hint"
                android:layout_gravity="center_horizontal"
                android:paddingTop="0dp"
                android:textColorHint="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/address_hint"
                android:layout_gravity="center_horizontal"
                android:paddingTop="0dp"
                android:textColorHint="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:layout_gravity="center_horizontal"
                android:paddingTop="0dp"
                android:textColorHint="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:layout_gravity="center_horizontal"
                android:paddingTop="0dp"
                android:textColorHint="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <Button
                android:text="Valider"
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white_text_background"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/default_margin"/>


            <Button
                android:text="Réinitialiser"
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white_text_background"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/default_margin"/>


        </LinearLayout>


        <ProgressBar
            android:id="@+id/sign_up_progress_bar"
            android:layout_width="@dimen/progressbar_width"
            android:layout_height="@dimen/progressbar_height"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/default_margin"
            android:visibility="gone"/>



    </LinearLayout>



</ScrollView>