<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/store_detailed_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_divider_height"
                android:background="@color/view_divider_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/store_image_detailed"
                    android:layout_width="@dimen/store_image_width"
                    android:layout_height="@dimen/store_image_height"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"/>


                <TextView
                    android:id="@+id/store_name_detailed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/text_margin"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text_size"/>



            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_divider_height"
                android:background="@color/view_divider_color" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_gravity="center"
                            android:id="@+id/store_description_detailed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_margin="@dimen/text_margin"/>

                    </LinearLayout>
                </ScrollView>





                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_divider_height"
                    android:background="@color/view_divider_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/store_address"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/text_margin"
                    android:textStyle="bold"/>



                <TextView
                    android:id="@+id/store_adress_detailed"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/store_cityNumber_detailed"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/store_city_detailed"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />





                </LinearLayout>




                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_divider_height"
                    android:background="@color/view_divider_color" />

                <Button
                    android:id="@+id/store_product_button"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white_text_background"
                    android:text="@string/store_to_product_button"
                    android:layout_margin="@dimen/default_margin"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_divider_height"
                android:background="@color/view_divider_color" />

            <Button
                android:id="@+id/view_store_on_map"
                android:text="@string/view_store_on_map"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white_text_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin"/>

        </LinearLayout>
    </ScrollView>




</LinearLayout>